# microservices-example

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  dev.mk  devspace.yaml  docker-compose.yml  help.mk  package.json  skaffold.yaml
.docker/db-init/: db-init.sql
.github/workflows/: account-service.yml  account-subgraph.yml  contents-view-subgraph.yml  hasura.yml  views-count-service.yml  views-count-subgraph.yml  web-app.yml
docker/: go.Dockerfile  rust.Dockerfile
hasura/: config.yaml
hasura/metadata/: actions.graphql  actions.yaml  remote_schemas.yaml
k8s/account-service/: env.yaml  jwt-cert.yaml
k8s/base/: account-service.yaml  account-subgraph.yaml  contents-view-subgraph.yaml  hasura.yaml  kustomization.yaml  postgres.yaml  redis.yaml  views-count-service.yaml  views-count-subgraph.yaml  web-app.yaml
k8s/dev/: kustomization.yaml
k8s/hasura/: config.yaml
k8s/postgres/: db-config.yaml  db-init.yaml
proto/: account.proto  recommendations.proto
src/account-service/: .dockerignore  (+9 more)
src/account-subgraph/: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  devspace.yaml  devspace_start.sh
src/account-subgraph/dockerfiles/: prod.Dockerfile
src/account-subgraph/proto/: account.proto
src/account-subgraph/src/: account.rs  error.rs  main.rs  schema.rs
src/views-count-service/: .dockerignore  Cargo.toml  build.rs  devspace.yaml
src/views-count-service/dockerfiles/: dev.Dockerfile  prod.Dockerfile
src/views-count-service/proto/: views_count.proto
src/views-count-service/src/: error.rs  main.rs  store.rs  views_count.rs
(+126 files in other folders)
