[package]
name = "account-subgraph"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
axum = { version = "0.6.6", features = ["ws", "headers"] }
futures-util = "0.3.26"
hyper = "0.14.24"
prost = "0.11.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tonic-richer-error = "0.3.1"

[build-dependencies]
tonic-build = "0.8.4"
