[package]
name = "views_count_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
redis = "0.22.3"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio", "collector_client", "isahc_collector_client"] }
opentelemetry-auto-span = "0.2.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.8.4"
